add paragraphs to pickle webpage

--- a/picklerecipes.html
+++ b/picklerecipes.html
@@ -8,6 +8,24 @@
   <body>
     <h1>Pickle Recipes</h1>
     <h2>Types of Pickes</h2>
+    <ul>
+      <li>Mango</li>
+      <li>Cabbage</li>
+      <li>Cauliflower</li>
+      <li>Dill</li>
+    </ul>
 
+    <h3>Mango pickle</h3>
+    <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan brooklyn, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+
+    <h3>Cabbage pickle</h3>
+    <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan brooklyn, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+
+    <h3>Cauliflower pickle</h3>
+    <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan brooklyn, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+
+    <h3>Dill pickle</h3>
+    <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan brooklyn, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+     
   </body>
 </html>
