--- a/picklerecipes.html
+++ b/picklerecipes.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/css/master.css" text="text/css" media="all">
+    <link rel="stylesheet" href="css/styles.css" text="text/css" media="all">
     <meta charset="utf-8">
     <title>pickles</title>
   </head>
   <body>
     <h1>Pickle Recipes</h1>
-    <h2>Types of Pickes</h2>
-    <ul>
-      <li>Mango</li>
-      <li>Cabbage</li>
-      <li>Cauliflower</li>
-      <li>Dill</li>
-    </ul>
+    <div class="sidebar">
 
-    <h3>Mango pickle</h3>
-    <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan brooklyn, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
 
-    <h3>Cabbage pickle</h3>
-    <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan brooklyn, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+      <img src="image/rickPick.jpeg" alt="picture of Rick as a Pickle">
 
-    <h3>Cauliflower pickle</h3>
-    <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan brooklyn, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+      <h2>Types of Pickes</h2>
+        <ul>
+        <li>Mango</li>
+        <li>Cabbage</li>
+        <li>Cauliflower</li>
+        <li>Dill</li>
+      </ul>
+    </div>
 
-    <h3>Dill pickle</h3>
-    <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan brooklyn, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
-     
+
+    <div class="mango">
+      <h3>Mango pickle</h3>
+      <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan <span class="newYork">brooklyn</span>, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+    </div>
+
+    <div class="cabbage">
+      <h3>Cabbage pickle</h3>
+      <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan <span class="newYork">brooklyn</span>, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+    </div>
+
+    <div class="cauliflower">
+      <h3>Cauliflower pickle</h3>
+      <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan <span class="newYork">brooklyn</span>, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+    </div>
+
+    <div class="dill">
+      <h3>Dill pickle</h3>
+      <p>Lorem ipsum dolor amet vice cold-pressed marfa vaporware ennui tumblr health goth jianbing viral kogi synth humblebrag glossier shoreditch. Try-hard put a bird on it banjo adaptogen actually pinterest. Single-origin coffee la croix cardigan <span class="newYork">brooklyn</span>, gastropub disrupt tote bag hoodie direct trade portland chambray pok pok kickstarter leggings truffaut. Artisan gochujang hot chicken snackwave distillery affogato. Health goth fam four loko plaid migas occupy leggings. Helvetica raw denim stumptown food truck gluten-free.</p>
+    </div>
+
   </body>
 </html>
